objects/ssot__KnowledgeArticleVersion__dlm.object
<CustomObject>
    <fields>
        <fullName>Answer_c__c</fullName>
        <label>Answer</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssignmentNote__c</fullName>
        <label>Assignment Note</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>Key Qualifier Knowledge Article Version</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LargeLanguageModel__c</fullName>
        <label>Large Language Model</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MigratedToFromArticleVersion__c</fullName>
        <label>Mapping info between old Article Version</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_c__c</fullName>
        <label>Question</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ArticleContentText__c</fullName>
        <label>Article Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ArticleNumber__c</fullName>
        <label>Article Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalRecordId__c</fullName>
        <label>External Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalSourceId__c</fullName>
        <label>External Source Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExternalURL__c</fullName>
        <label>External URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__FirstPublishedDateTime__c</fullName>
        <label>First Published Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Knowledge Article Version Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsExternalData__c</fullName>
        <label>Is External data</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsLatestVersion__c</fullName>
        <label>Is Latest Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsPrimaryLanguage__c</fullName>
        <label>Is Primary Language</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsVisibleInApp__c</fullName>
        <label>Visible In Internal App</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsVisibleInPublicKnowledgeBase__c</fullName>
        <label>Visible In Public Knowledge Base</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsVisibleToCustomer__c</fullName>
        <label>Visible to Customer</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsVisibleToPartner__c</fullName>
        <label>Visible to Partner</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KnowledgeArticleId__c</fullName>
        <label>Knowledge Article</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__KnowledgePublicationStatus__c</fullName>
        <label>Knowledge Publication Status Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Language__c</fullName>
        <label>Language</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MasterVersionId__c</fullName>
        <label>Master Knowledge Article Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__NextReviewDateTime__c</fullName>
        <label>Next Review DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecordType__c</fullName>
        <label>Record Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__VersionNumber__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009469801_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KnowledgeArticleVersion_MasterVersio_rel</label>
        <referenceTo>ssot__KnowledgeArticleVersion__dlm</referenceTo>
        <relationshipLabel>KnowledgeArticleVersion_MasterVersio_rel</relationshipLabel>
        <relationshipName>rel_1702009469801_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009470647_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KnowledgeArticleVersion_KnowledgeArt_rel</label>
        <referenceTo>ssot__KnowledgeArticle__dlm</referenceTo>
        <relationshipLabel>KnowledgeArticleVersion_KnowledgeArt_rel</relationshipLabel>
        <relationshipName>rel_1702009470647_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1702009520413_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KnowledgeArticleVersion_CreatedById__rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>KnowledgeArticleVersion_CreatedById__rel</relationshipLabel>
        <relationshipName>rel_1702009520413_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>